--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,21 @@
     tools:context="com.gilandeddy.pocketmovie.MainActivity"
     android:orientation="vertical">
 
+<android.support.design.widget.TabLayout
+    android:id="@+id/sliding_tabs"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:tabMode="fixed">
+
+</android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/pager">
+
+    </android.support.v4.view.ViewPager>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recentMovieRecycler"
@@ -14,5 +29,7 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+
+
 
 </LinearLayout>
