--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -11,8 +11,7 @@
             android:id="@+id/recentMovieRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
-           >
+            android:layout_weight="9">
 
         </android.support.v7.widget.RecyclerView>
 
