--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorMain">
 
     <TextView
         android:id="@+id/movieTitleView"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
+        android:textColor="@color/colorText"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -26,6 +28,7 @@
         android:id="@+id/movieRatingView"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
+        android:textColor="@color/colorText"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -55,6 +58,7 @@
         android:id="@+id/nextPageTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textColor="@color/colorText"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
