--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.gilandeddy.pocketmovie.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorMain"
 
-<android.support.design.widget.TabLayout
-    android:id="@+id/sliding_tabs"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:tabMode="fixed">
+    >
 
-</android.support.design.widget.TabLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        app:tabTextColor="@color/colorText"
+        app:tabSelectedTextColor="@color/colorText"
+        app:tabMode="fixed">
+
+    </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/pager">
+        android:id="@+id/pager"
+        android:background="@color/colorMain">
 
     </android.support.v4.view.ViewPager>
 
