Share Menu item without Pocket link.

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -94,7 +94,9 @@
         android:layout_marginStart="8dp"
         android:onClick="onPocketClicked"
         android:text="@string/pocket"
+        android:buttonTint="@color/colorText"
         android:textColor="@color/colorText"
+        android:textColorLink="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
