--- a/app/src/main/res/menu/menu_main_tab.xml
+++ b/app/src/main/res/menu/menu_main_tab.xml
@@ -1,11 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.gilandeddy.pocketmovie.MainTabActivity">
+    tools:context="com.gilandeddy.pocketmovie.MainTabActivity"
+    >
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"
-        android:background="#333333"/>
+        android:iconTint="@color/colorMain"
+        android:icon="@color/colorMain"
+                android:background="@color/colorMain"/>
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="100"
+        android:iconTint="@color/colorMain"
+        android:icon="@color/colorMain"
+        android:title="@string/action_share"
+        app:showAsAction="never"
+        android:background="@color/colorMain"/>
 </menu>
