--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,21 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#333333</item>
-        <item name="colorPrimaryDark">#333333</item>
-        <item name="colorAccent">#5DBCD2</item>
+        <item name="colorPrimary">@color/colorMain</item>
+        <item name="colorPrimaryDark">@color/colorText</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        
         <item name="android:actionMenuTextColor">@color/colorText</item>
         <item name="android:actionMenuTextAppearance">@color/colorMain</item>
+        <item name="android:actionBarStyle">@style/CustomActionBar</item>
+
+    </style>
+    <style name="CustomActionBar" parent="@android:style/Widget.DropDownItem">
+        <item name="android:buttonTint">@color/colorMain</item>
+        <item name="android:textColor">@color/colorText</item>
+
 
     </style>
 
@@ -17,8 +25,6 @@
 
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
