--- a/app/src/main/res/menu/menu_main_tab.xml
+++ b/app/src/main/res/menu/menu_main_tab.xml
@@ -1,22 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.gilandeddy.pocketmovie.MainTabActivity"
-    >
+    tools:context="com.gilandeddy.pocketmovie.MainTabActivity">
     <item
         android:id="@+id/action_settings"
+        android:color="@color/colorMain"
         android:orderInCategory="100"
+        android:state_enabled="false"
+
         android:title="@string/action_settings"
-        app:showAsAction="never"
-        android:iconTint="@color/colorMain"
-        android:icon="@color/colorMain"
-                android:background="@color/colorMain"/>
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_share"
-        android:orderInCategory="100"
-        android:iconTint="@color/colorMain"
+        android:background="@color/colorMain"
+
+        android:color="@color/colorMain"
         android:icon="@color/colorMain"
+        android:orderInCategory="100"
+        android:state_selected="true"
         android:title="@string/action_share"
-        app:showAsAction="never"
-        android:background="@color/colorMain"/>
+        app:showAsAction="never" />
+
 </menu>
